# trajectory_follower

./: .gitignore  README.md  package.xml  setup.py
config/: corridor_map_waypoints.yaml  grid_map_waypoints.yaml  robotnik_min_map_waypoints.yaml  waypoints.yaml
launch/: trajectory_follower.launch.py
trajectory_follower/: trajectory_follower.py
