<?xml version="1.0"?>
<package format="3">
  <name>trajectory_follower</name>
  <version>1.0.0</version>
  <description>Nodo de seguimiento de trayectorias por waypoints en YAML para ROS2</description>
  <maintainer email="asoriano@robotnik.es">Ángel Soriano</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias de ejecución y build -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>PyYAML</depend>

  <!-- Dependencias de test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

